--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ h1 {
     margin-top: 3rem;
 }
 
-a h2 {
+span {
     position: relative;
     font-family: "iA Writer Quattro S Bold Italic";
     color: white;
@@ -34,21 +34,23 @@ a h2 {
     line-height: 15pt;
     text-align: center;
     justify-content: center;
-    margin-top: 2.2rem;
-    height: 30%;
 }
 
-a h3 {
+h2 {
     font-family: "iA Writer Quattro S Regular";
     color: white;
     text-align: center;
     font-size: 9pt;
-    line-height: 11pt;
-    height: 30%;
+    line-height: 12pt;
+    margin-top: 2.4rem;
 }
 
 a {
     text-decoration: none;
+}
+
+br {
+    line-height: 2rem;
 }
 
 main {
@@ -75,7 +77,7 @@ main {
     margin-top: -1rem;
 }
 
-h2:hover {
+span:hover {
     font-size: 18pt;
     line-height: 25pt;
     margin-top: 2.2rem;
@@ -123,19 +125,25 @@ h2:hover {
         font-size: 2rem;
         margin-top: 2rem;
     }
-    
-    a h2 {
-        font-size: 8pt;
-        line-height: 12pt;
+
+    span {
+        font-size: 7pt;
+        line-height: 9pt;
         margin-top: 1rem;
         height: 30%;
     }
     
-    a h3 {
-        font-size: 6pt;
-        line-height: 7pt;
+    h2 {
+        font-size: 5pt;
+        line-height: 8pt;
+        margin-top: 1rem;
         height: 30%;
     }
+
+    br {
+        line-height: 0.7rem;
+    }
+    
 
     main {
         display: grid;
