--- a/style.css
+++ b/style.css
@@ -127,36 +127,32 @@ span:hover {
     }
 
     span {
-        font-size: 7pt;
-        line-height: 9pt;
-        margin-top: 1rem;
-        height: 30%;
+        font-size: 5pt;
+        line-height: 7pt;
     }
     
     h2 {
-        font-size: 5pt;
-        line-height: 8pt;
-        margin-top: 1rem;
-        height: 30%;
+        font-size: 4pt;
+        line-height: 6pt;
+        margin-top: 1.3rem;
     }
 
     br {
         line-height: 0.7rem;
     }
     
-
     main {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         grid-gap: 0.3rem;
-        margin-left: 1rem;
+        margin-left: 2.2rem;
         padding-bottom: 2rem;
     }
     
     .hover {
         width: 5rem;
         height: 5rem;
-        margin: 0.5rem;
+        margin: 0.1rem;
         padding: 6pt;
         transition: all .5s;
     }
@@ -165,10 +161,8 @@ span:hover {
         margin-top: -1rem;
     }
     
-    h2:hover {
-        font-size: 8pt;
-        line-height: 12pt;
-        margin-top: 1rem;
-        height: 30%;
+    span:hover {
+        font-size: 3pt;
+        line-height: 5pt;
     }
 }
